--- a/index.html
+++ b/index.html
@@ -60,5 +60,40 @@
                 </div>
             </div>
         </header>
+        <main>
+            <div class="icon-section container-fluid">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-3">
+                            <a href="#"><img src="images/drone.png" class="center-block"></a>
+                            <h3>From air</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum interdum rutrum nibh, vitae tempus elit imperdiet at.</p>
+                        </div>
+                        <div class="col-lg-3">
+                            <a href="#"><img src="images/drone-1.png" class="center-block"></a>
+                            <h3>Best drones</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum interdum rutrum nibh, vitae tempus elit imperdiet at.</p>
+                        </div>
+                        <div class="col-lg-3">
+                            <a href="#"><img src="images/propeller.png" class="center-block"></a>
+                            <h3>Speed</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum interdum rutrum nibh, vitae tempus elit imperdiet at.</p>
+                        </div>
+                        <div class="col-lg-3">
+                            <a href="#"><img src="images/control.png" class="center-block"></a>
+                            <h3>Long range</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum interdum rutrum nibh, vitae tempus elit imperdiet at.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <button type="button" class="btn btn-primary icon-btn-1 mr-2">Ask for price</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
