--- a/index.html
+++ b/index.html
@@ -94,6 +94,23 @@
                     </div>
                 </div>
             </div>
+            <div class="drone-section container-fluid">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8">
+                            <h1>Nature from the air</h1>
+                            <p>Nulla in justo id tortor aliquam finibus et non urna. Cras imperdiet consequat massa, eget posuere erat consequat nec. Cras aliquet tincidunt felis non dignissim.</p>
+                            <ol>
+                                <li>Aliquam erat volutpat. Fusce suscipit feugiat euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                                <li>Aliquam erat volutpat. Fusce suscipit feugiat euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                                <li>Aliquam erat volutpat. Fusce suscipit feugiat euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                                <li>Aliquam erat volutpat. Fusce suscipit feugiat euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                                <li>Aliquam erat volutpat. Fusce suscipit feugiat euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                            </ol>   
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
