--- a/index.html
+++ b/index.html
@@ -111,6 +111,28 @@
                     </div>
                 </div>
             </div>
+            <div class="portfollio-section container-fluid">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="vid-top col-lg-6"><img src="images/play-btn.png" class="play-vid"></div>
+                        <div class="port-content-top col-lg-6">
+                            <h2>Nature from air</h2>
+                            <p>Nulla pulvinar nibh non urna varius, et aliquet urna consequat. Nulla rhoncus justo non tellus auctor ultricies. Vestibulum egestas, ligula eu malesuada posuere, elit elit faucibus felis, sed rhoncus felis augue sed augue.</p>
+                            <button type="button" class="btn btn-primary port-btn-1 mr-2">Ask for price</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-fluid">
+                        <div class="row">
+                            <div class="port-content-top col-lg-6">
+                                <h2>City from air</h2>
+                                <p>Nulla pulvinar nibh non urna varius, et aliquet urna consequat. Nulla rhoncus justo non tellus auctor ultricies. Vestibulum egestas, ligula eu malesuada posuere, elit elit faucibus felis, sed rhoncus felis augue sed augue.</p>
+                                <button type="button" class="btn btn-primary port-btn-1 mr-2">Ask for price</button>
+                            </div>
+                            <div class="vid-bot col-lg-6"><img src="images/play-btn.png" class="play-vid"></div>
+                        </div>
+                    </div>
+            </div>
         </main>
     </body>
 </html>
