--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
                         </div>
                     </div>
             </div>
+            <div class="newsletter-section container-fluid">
+                <h1>Sign up for our newsletter</h1>
+                <form action="/action_page.php">
+                    <input class="email-input" type="email" placeholder="Email address"/><button class="send-btn">Send</button>
+                </form>
+            </div>
         </main>
     </body>
 </html>
