map and footer sections

--- a/index.html
+++ b/index.html
@@ -139,6 +139,20 @@
                     <input class="email-input" type="email" placeholder="Email address"/><button class="send-btn">Send</button>
                 </form>
             </div>
+            <div class="map-section container-fluid">
+                <div class="row">
+                    <div id="map"></div>
+                </div>
+            </div>
+            <div class="footer-section container-fluid">
+                <div class="row">
+                    <div class="col-lg-4 offset-lg-4">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent placerat tempus turpis, nec vestibulum tortor malesuada ut.</p>
+                    </div>
+                </div>
+            </div>
         </main>
+        <script src="index.js"></script>
+        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGUVMQ0K1KEKjp6-fNKO21z1cicpMcyaA&callback=initMap"></script>
     </body>
 </html>
