--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <header>
@@ -40,6 +41,20 @@
                                     </li>
                                 </ul>
                             </div>
+                            <div class="navigation-res dropleft">
+                                <a class="btn btn-secondary btn-menu-res dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                  Menu
+                                </a>
+                              
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                  <a class="dropdown-item" href="#">Home</a>
+                                  <a class="dropdown-item" href="#">About</a>
+                                  <a class="dropdown-item" href="#">Pricing</a>
+                                  <a class="dropdown-item" href="#">Our drones</a>
+                                  <a class="dropdown-item" href="#">Our realizations</a>
+                                  <a class="dropdown-item" href="#">Contact</a>
+                                </div>
+                              </div>
                         </div>
                     </div>
                     
@@ -64,22 +79,22 @@
             <div class="icon-section container-fluid">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-3">
+                        <div class="col-3">
                             <a href="#"><img src="images/drone.png" class="center-block"></a>
                             <h3>From air</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum interdum rutrum nibh, vitae tempus elit imperdiet at.</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-3">
                             <a href="#"><img src="images/drone-1.png" class="center-block"></a>
                             <h3>Best drones</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum interdum rutrum nibh, vitae tempus elit imperdiet at.</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-3">
                             <a href="#"><img src="images/propeller.png" class="center-block"></a>
                             <h3>Speed</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum interdum rutrum nibh, vitae tempus elit imperdiet at.</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-3">
                             <a href="#"><img src="images/control.png" class="center-block"></a>
                             <h3>Long range</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum interdum rutrum nibh, vitae tempus elit imperdiet at.</p>
@@ -97,7 +112,7 @@
             <div class="drone-section container-fluid">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-8">
+                        <div class="col-8">
                             <h1>Nature from the air</h1>
                             <p>Nulla in justo id tortor aliquam finibus et non urna. Cras imperdiet consequat massa, eget posuere erat consequat nec. Cras aliquet tincidunt felis non dignissim.</p>
                             <ol>
@@ -114,8 +129,8 @@
             <div class="portfollio-section container-fluid">
                 <div class="container-fluid">
                     <div class="row">
-                        <div class="vid-top col-lg-6"><img src="images/play-btn.png" class="play-vid"></div>
-                        <div class="port-content-top col-lg-6">
+                        <div class="vid-top col-6"><img src="images/play-btn.png" class="play-vid"></div>
+                        <div class="port-content-top col-6">
                             <h2>Nature from air</h2>
                             <p>Nulla pulvinar nibh non urna varius, et aliquet urna consequat. Nulla rhoncus justo non tellus auctor ultricies. Vestibulum egestas, ligula eu malesuada posuere, elit elit faucibus felis, sed rhoncus felis augue sed augue.</p>
                             <button type="button" class="btn btn-primary port-btn-1 mr-2">Ask for price</button>
@@ -124,12 +139,12 @@
                 </div>
                 <div class="container-fluid">
                         <div class="row">
-                            <div class="port-content-top col-lg-6">
+                            <div class="port-content-top col-6">
                                 <h2>City from air</h2>
                                 <p>Nulla pulvinar nibh non urna varius, et aliquet urna consequat. Nulla rhoncus justo non tellus auctor ultricies. Vestibulum egestas, ligula eu malesuada posuere, elit elit faucibus felis, sed rhoncus felis augue sed augue.</p>
                                 <button type="button" class="btn btn-primary port-btn-1 mr-2">Ask for price</button>
                             </div>
-                            <div class="vid-bot col-lg-6"><img src="images/play-btn.png" class="play-vid"></div>
+                            <div class="vid-bot col-6"><img src="images/play-btn.png" class="play-vid"></div>
                         </div>
                     </div>
             </div>
@@ -152,6 +167,9 @@
                 </div>
             </div>
         </main>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <script src="index.js"></script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGUVMQ0K1KEKjp6-fNKO21z1cicpMcyaA&callback=initMap"></script>
     </body>
